--- a/index.html
+++ b/index.html
@@ -45,6 +45,19 @@
         #temp {
             margin-left: 8px;
         }
+
+        #videoTitle {
+            font-size: 16px;
+            margin-bottom: 8px;
+            color: #333;
+        }
+        
+        .stats {
+            display: flex;
+            gap: 16px;
+            font-size: 14px;
+            color: #666;
+        }
     </style>
 </head>
 <body>
@@ -69,8 +82,14 @@
     </div>
 
     <div class="card">
-        <div class="title">B站视频播放量</div>
-        <div class="content" id="biliCount">--</div>
+        <div class="title">B站视频信息</div>
+        <div class="content" id="biliInfo">
+            <div id="videoTitle">--</div>
+            <div class="stats">
+                <span id="viewCount">播放: --</span>
+                <span id="likeCount">点赞: --</span>
+            </div>
+        </div>
     </div>
 
     <script>
@@ -87,8 +106,8 @@
         async function getWeather() {
             try {
                 // 这里使用的是 OpenWeatherMap API，你需要注册一个免费的 API key
-                const API_KEY = '你的API密钥';
-                const city = 'Beijing'; // 可以改成你想要的城市
+                const API_KEY = '94f5e41503d49a430073eb1636cff98b';
+                const city = 'Shenzhen'; // 可以改成你想要的城市
                 const response = await fetch(`https://api.openweathermap.org/data/2.5/weather?q=${city}&appid=${API_KEY}&units=metric`);
                 const data = await response.json();
                 document.getElementById('temp').textContent = `${Math.round(data.main.temp)}°C`;
@@ -101,13 +120,15 @@
         // 获取B站视频播放量
         async function getBiliPlayCount() {
             try {
-                // 这里需要替换成实际的B站视频 BV 号
-                const bvid = 'BV1TpNNewE4W';
-                const response = await fetch(`https://api.bilibili.com/x/web-interface/view?bvid=${bvid}`);
+                const bvid = 'BV1TpNNewE4W'; // 你的视频BV号
+                const response = await fetch(`/api/bilibili?bvid=${bvid}`);
                 const data = await response.json();
-                document.getElementById('biliCount').textContent = data.data.view;
+                
+                document.getElementById('videoTitle').textContent = data.title;
+                document.getElementById('viewCount').textContent = `播放: ${data.view}`;
+                document.getElementById('likeCount').textContent = `点赞: ${data.like}`;
             } catch (error) {
-                console.error('获取播放量失败:', error);
+                console.error('获取视频信息失败:', error);
             }
         }
         getBiliPlayCount();
