--- a/index.html
+++ b/index.html
@@ -129,10 +129,29 @@
         setInterval(updateTime, 1000);
         updateTime();
 
-        // 获取天气信息
+        // 更新B站数据的函数
+        async function getBiliPlayCount() {
+            try {
+                const bvid = 'BV1TpNNewE4W'; // 你的视频BV号
+                const response = await fetch(`/api/bilibili?bvid=${bvid}`);
+                const data = await response.json();
+                
+                document.getElementById('videoTitle').textContent = data.title;
+                document.getElementById('viewCount').textContent = `播放: ${data.view}`;
+                document.getElementById('likeCount').textContent = `点赞: ${data.like}`;
+            } catch (error) {
+                console.error('获取视频信息失败:', error);
+            }
+        }
+
+        // 初始加载并设置60秒自动刷新
+        getBiliPlayCount();
+        setInterval(getBiliPlayCount, 60 * 1000);
+
+        // 天气获取函数
         async function getWeather() {
             try {
-                const API_KEY = '94f5e41503d49a430073eb1636cff98b';
+                const API_KEY = '你的API密钥';
                 const lat = 22.53291;
                 const lon = 113.93029;
                 const response = await fetch(
@@ -165,25 +184,9 @@
             }
         }
 
-        // 每30分钟更新一次天气
+        // 初始加载天气并设置30分钟自动刷新
         getWeather();
         setInterval(getWeather, 30 * 60 * 1000);
-
-        // 获取B站视频播放量
-        async function getBiliPlayCount() {
-            try {
-                const bvid = 'BV1TpNNewE4W'; // 你的视频BV号
-                const response = await fetch(`/api/bilibili?bvid=${bvid}`);
-                const data = await response.json();
-                
-                document.getElementById('videoTitle').textContent = data.title;
-                document.getElementById('viewCount').textContent = `播放: ${data.view}`;
-                document.getElementById('likeCount').textContent = `点赞: ${data.like}`;
-            } catch (error) {
-                console.error('获取视频信息失败:', error);
-            }
-        }
-        getBiliPlayCount();
     </script>
 </body>
 </html> 
