--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         // 天气获取函数
         async function getWeather() {
             try {
-                const API_KEY = '你的API密钥';
+                const API_KEY = '94f5e41503d49a430073eb1636cff98b';
                 const lat = 22.53291;
                 const lon = 113.93029;
                 const response = await fetch(
